--- a/API_test.ipynb
+++ b/API_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,15 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введіть id = 6\n",
-      "dolorem eum magni eos aperiam quia\n"
+      "Введіть id = 4\n",
+      "eum et est occaecati\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +200,85 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========\n",
+      "{'postId': 3, 'id': 11, 'name': 'fugit labore quia mollitia quas deserunt nostrum sunt', 'email': 'Veronica_Goodwin@timmothy.net', 'body': 'ut dolorum nostrum id quia aut est\\nfuga est inventore vel eligendi explicabo quis consectetur\\naut occaecati repellat id natus quo est\\nut blanditiis quia ut vel ut maiores ea'}\n",
+      "=========\n",
+      "{'postId': 3, 'id': 12, 'name': 'modi ut eos dolores illum nam dolor', 'email': 'Oswald.Vandervort@leanne.org', 'body': 'expedita maiores dignissimos facilis\\nipsum est rem est fugit velit sequi\\neum odio dolores dolor totam\\noccaecati ratione eius rem velit'}\n",
+      "=========\n",
+      "{'postId': 3, 'id': 13, 'name': 'aut inventore non pariatur sit vitae voluptatem sapiente', 'email': 'Kariane@jadyn.tv', 'body': 'fuga eos qui dolor rerum\\ninventore corporis exercitationem\\ncorporis cupiditate et deserunt recusandae est sed quis culpa\\neum maiores corporis et'}\n",
+      "=========\n",
+      "{'postId': 3, 'id': 14, 'name': 'et officiis id praesentium hic aut ipsa dolorem repudiandae', 'email': 'Nathan@solon.io', 'body': 'vel quae voluptas qui exercitationem\\nvoluptatibus unde sed\\nminima et qui ipsam aspernatur\\nexpedita magnam laudantium et et quaerat ut qui dolorum'}\n",
+      "=========\n",
+      "{'postId': 3, 'id': 15, 'name': 'debitis magnam hic odit aut ullam nostrum tenetur', 'email': 'Maynard.Hodkiewicz@roberta.com', 'body': 'nihil ut voluptates blanditiis autem odio dicta rerum\\nquisquam saepe et est\\nsunt quasi nemo laudantium deserunt\\nmolestias tempora quo quia'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def coments(id):\n",
+    "    comments = requests.get('https://jsonplaceholder.typicode.com/comments?postId=' + str(id))\n",
+    "    for comment in comments.json():\n",
+    "        print('=========')\n",
+    "        print (comment)\n",
+    "        \n",
+    "coments(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=========\n",
+      "laudantium enim quasi est quidem magnam voluptate ipsam eos\n",
+      "tempora quo necessitatibus\n",
+      "dolor quam autem quasi\n",
+      "reiciendis et nam sapiente accusantium\n",
+      "=========\n",
+      "est natus enim nihil est dolore omnis voluptatem numquam\n",
+      "et omnis occaecati quod ullam at\n",
+      "voluptatem error expedita pariatur\n",
+      "nihil sint nostrum voluptatem reiciendis et\n",
+      "=========\n",
+      "quia molestiae reprehenderit quasi aspernatur\n",
+      "aut expedita occaecati aliquam eveniet laudantium\n",
+      "omnis quibusdam delectus saepe quia accusamus maiores nam est\n",
+      "cum et ducimus et vero voluptates excepturi deleniti ratione\n",
+      "=========\n",
+      "non et atque\n",
+      "occaecati deserunt quas accusantium unde odit nobis qui voluptatem\n",
+      "quia voluptas consequuntur itaque dolor\n",
+      "et qui rerum deleniti ut occaecati\n",
+      "=========\n",
+      "harum non quasi et ratione\n",
+      "tempore iure ex voluptates in ratione\n",
+      "harum architecto fugit inventore cupiditate\n",
+      "voluptates magni quo et\n"
+     ]
+    }
+   ],
+   "source": [
+    "def coment():\n",
+    "    comments = requests.get('https://jsonplaceholder.typicode.com/posts/1/comments')\n",
+    "    for comment in comments.json():\n",
+    "        print('=========')\n",
+    "        print (comment ['body'])\n",
+    "        \n",
+    "coment()"
+   ]
   },
   {
    "cell_type": "code",
